# zeromqtt

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  docker-compose.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: main.ts  style.css
dashboard/src/components/: ConfirmDialog.vue  Modal.vue  Sidebar.vue  StatCard.vue  StatusIndicator.vue
dashboard/src/layouts/: MainLayout.vue
dashboard/src/router/: index.ts
dashboard/src/services/: api.ts  auth.ts  bridge.ts  users.ts
dashboard/src/stores/: auth.ts  bridge.ts
dashboard/src/views/: ConfigView.vue  DashboardView.vue  LoginView.vue  UsersView.vue
deploy/: prometheus.yml  zeromqtt.service
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: auth.rs  bridge.rs  config.rs  metrics.rs  mod.rs  status.rs  users.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/bridge/: core.rs  mod.rs  topic_mapper.rs  worker.rs
src/db/: connection.rs  mod.rs  repository.rs
src/mock/: bridge_mock.rs  mod.rs
src/models/: auth.rs  bridge.rs  mod.rs
src/mqtt/: client.rs  mod.rs
src/telemetry/: metrics.rs  mod.rs
src/zeromq/: client.rs  mod.rs
tests/: e2e_tests.rs  integration_tests.rs
tools/: e2e_tests.rs
